--- a/index.html
+++ b/index.html
@@ -1661,7 +1661,7 @@
                             </div>
 
                             <div>
-                                <label for="tubeZones">К-сть гардеробних зон з трубою PR-2912</label>
+                                <label for="tubeZones">К-сть гардеробних зон з прямокутної трубою PR-2912</label>
                                 <input type="number" id="tubeZones" min="0" value="0" />
                             </div>
                             <div>
@@ -3244,11 +3244,13 @@
 
                     <a
                             class="etse-cta__btn etse-cta__btn--primary"
-                            href="/TRIAL-eTSecutive-UA.pdf"
-                            download
+                            href="/trial-etsecutive-ua.pdf"
+                            target="_blank"
+                            rel="noopener"
                     >
                         Завантажити PDF про систему TS-603
                     </a>
+
 
                 </div>
             </div>
